--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -1,44 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7a2c9cbe",
+   "metadata": {},
+   "source": [
+    "# Import کتابخانه‌ها و تنظیمات پایه"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4beac06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
+    "\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4dc1a23",
+   "metadata": {},
+   "source": [
+    "# تنظیمات نمایش بهتر داده‌ها"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7e1c8dc5",
+   "id": "03b041d2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_and_clean_data, prepare_features\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodels\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_and_evaluate\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m save_results\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Libraries imported successfully.\n"
      ]
     }
    ],
    "source": [
-    "from src.preprocessing import load_and_clean_data, prepare_features\n",
-    "from src.models import train_and_evaluate\n",
-    "from src.utils import save_results\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# 1. Load data\n",
-    "df = load_and_clean_data(\"data/Konzas.csv\")\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "sns.set(style=\"whitegrid\")\n",
     "\n",
-    "# 2. Prepare features\n",
-    "X, y = prepare_features(df)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# 3. Train and evaluate\n",
-    "results_df = train_and_evaluate(X_train, X_test, y_train, y_test)\n",
-    "\n",
-    "# 4. Save results\n",
-    "save_results(results_df)\n",
-    "\n",
-    "# 5. Show\n",
-    "results_df\n"
+    "print(\"✅ Libraries imported successfully.\")\n"
    ]
   }
  ],
